# copper-tea

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: scheduled-run.yml
app/: config.py  main.py  scheduler.py
app/alerts/: formatter.py  telegram.py
app/db/: models.py  repositories.py  session.py
app/providers/: base.py  csv_provider.py  factory.py  mock_provider.py  rss_news_provider.py  yahoo_provider.py
app/scoring/: score.py
app/seeds/: benchmarks.yml  commodities.yml  companies.yml
app/services/: dedup_service.py  pipeline.py  run_guard.py  value_estimator.py
app/utils/: names.py  time.py
scripts/: add_position.py  import_value_targets.py  import_watchlist.py  init_db.py  run_once.py  run_service.py  seed_db.py  show_status.py  telegram_bot.py
