[project]
name = "copper-tea"
version = "0.1.0"
description = "Commodity event based stock watchlist and Telegram alert system."
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "requests>=2.32.0",
  "SQLAlchemy>=2.0.30",
  "tzdata>=2025.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
